[FIX] website: fix mega menu overlapping navbar issue on hover
Issue:
The mega menu slightly overlaps the navbar when submenus are set to open
'On Hover'.

Steps to reproduce:
- Go to Website > Site > Menu Editor and add a mega menu item.
- Edit the header and set 'Sub Menus' to 'On Hover'.
- Change the header background color to better visualize the issue.
- Hover on the mega menu and observe that it slightly overlaps the
  navbar.

Reason:
Inside the `hoverableDropdown` public widget, the `_dropdownHover`
function sets `top: unset` on `.dropdown-menu` elements when 'Sub Menus'
is set to 'On Hover'. This makes the dropdown behave like `top: auto`
and take its static position, which leads to slight misalignment.

Fix:
Remove the inline `top` property from `.dropdown-menu` so it falls back
to the default CSS (`top: 100%`). Since the dropdown is absolutely
positioned relative to the navbar, it aligns correctly below it and
no longer overlaps.

task-6116253

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1246,6 +1246,7 @@ header {
         // TODO in master: remove the `#o_main_nav` selector.
         #o_main_nav,.o_main_nav {
             > .container {
+                position: relative;
                 // TODO: remove in master and add "align-items-center" in the XML.
                 align-items: center;
             }
@@ -1281,6 +1282,9 @@ header {
     header#top > nav:not(.o_header_mobile) {
         // TODO in master: remove the `#o_main_nav` selector.
         #o_main_nav, .o_main_nav {
+            > .container:first-child {
+                position: relative;
+            }
             .navbar-nav {
                 // TODO: remove in master and add "align-items-center" in the XML.
                 align-items: center;
@@ -1315,7 +1319,7 @@ header {
 
 // Mega menu
 .o_mega_menu {
-    width: 100%;
+    width: if(index(('sales_one', 'sales_four'), o-website-value('header-template')), 100vw, 100%);
     padding: 0;
     margin-top: 0 !important;
     border-radius: 0;
@@ -1331,11 +1335,17 @@ header {
     }
 }
 
+.o_header_sales_four_top .dropdown-menu.o_mega_menu, .navbar:has(.o_header_sales_one_right_col) .dropdown-menu.o_mega_menu {
+    @include media-breakpoint-up(lg) {
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
 .dropdown-menu.o_mega_menu_container_size {
     $-header-template: o-website-value('header-template');
     @if not index(('sidebar', 'hamburger'), $-header-template) {
-        $bp: if($-header-template == 'minimalist', md, lg);
-        @include media-breakpoint-up($bp) {
+        @include media-breakpoint-up(lg) {
             left: 50%;
             transform: translateX(-50%);
         }
